--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "query-string": "latest",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "query-string": "latest"
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
