--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "wangeditor": "^3.1.1"
+    "wangeditor": "^3.1.1",
+    "vod-js-sdk-v6": "latest"
   },
   "devDependencies": {
 
